# template-kindle-gtk

./: README.md  meson.build
.devcontainer/: Dockerfile  devcontainer.json  finalize.sh  setup-toolchain.sh
src/: main.cpp  main.ui.xml
